--- a/.github/workflows/win2022.yml
+++ b/.github/workflows/win2022.yml
@@ -35,6 +35,7 @@ jobs:
         cmd /c start.bat
 
     - name: Create result file
+      shell: cmd
       run: |
         echo IP: >> result.txt
         for /f "tokens=*" %%a in ('findstr /c:"tcp://" start.bat') do echo %%a>>result.txt
@@ -48,3 +49,4 @@ jobs:
         path: result.txt
     - name: Keep RDP alive
       run: cmd /c loop.bat
+  
